[package]
autobenches = false
autobins = false
autoexamples = false
autotests = false
default-run = "Document"
documentation = "https://docs.document.land.playform.cloud"
edition = "2021"
homepage = "https://document.land.playform.cloud"
license-file = "LICENSE"
name = "Document"
publish = false
repository = "https://github.com/CodeEditorLand/CargoMaintain"
version = "0.0.1"

[[bin]]
name = "Document"
path = "Source/Fn/Binary/Document.rs"

[lib]
name = "Library"
path = "Source/Library.rs"

[dependencies]
clap = { version = "4.4.18", features = ["cargo"] }
proc_use = "0.2.1"
rayon = "1.8.1"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
toml = "0.8.8"
